--- a/tauhidz/pubspec.yaml
+++ b/tauhidz/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
+  syncfusion_flutter_charts: ^20.4.54
 
 dev_dependencies:
   flutter_test:
