--- a/tauhidz/pubspec.yaml
+++ b/tauhidz/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   syncfusion_flutter_charts: ^20.4.54
+  stateless: ^0.1.1
 
 dev_dependencies:
   flutter_test:
