--- a/tauhidz/pubspec.yaml
+++ b/tauhidz/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   syncfusion_flutter_charts: ^20.4.54
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
+  percent_indicator: ^4.2.3
+  
 
 dev_dependencies:
   flutter_test:
