--- a/tauhidz/pubspec.yaml
+++ b/tauhidz/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^4.0.4
   syncfusion_flutter_charts: ^20.4.54
   introduction_screen: ^3.1.8
+  file_picker: ^5.3.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
