--- a/tauhidz/pubspec.yaml
+++ b/tauhidz/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   introduction_screen: ^3.1.4
   file_picker: ^5.3.1
   image_picker: ^0.8.7+5
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
